# HPC_project

./: README.md
exercise1/: README.md  exercise1.html
exercise1/osu-micro-benchmarks-7.3/: Makefile  config.status  libtool
exercise1/osu-micro-benchmarks-7.3/c/: Makefile
exercise1/osu-micro-benchmarks-7.3/c/mpi/: Makefile
exercise1/osu-micro-benchmarks-7.3/c/mpi/collective/: Makefile
exercise1/osu-micro-benchmarks-7.3/c/mpi/one-sided/: Makefile  osu_acc_latency  osu_cas_latency  osu_fop_latency  osu_get_acc_latency  osu_get_bw  osu_get_latency  osu_put_bibw  osu_put_bw  osu_put_latency
exercise1/osu-micro-benchmarks-7.3/c/mpi/pt2pt/: Makefile
exercise1/osu-micro-benchmarks-7.3/c/mpi/startup/: Makefile  osu_hello  osu_init
exercise1/osu-micro-benchmarks-7.3/c/openshmem/: Makefile
exercise1/osu-micro-benchmarks-7.3/c/upc/: Makefile
exercise1/osu-micro-benchmarks-7.3/c/upcxx/: Makefile
exercise1/osu-micro-benchmarks-7.3/c/util/.deps/: osu_util.Po  osu_util_graph.Po  osu_util_mpi.Po  osu_util_papi.Po  osu_util_validation.Po
exercise1/osu-micro-benchmarks-7.3/c/xccl/: Makefile
exercise1/results/: barrierEPYC.csv  barrierTHIN.csv  bcastEPYC.csv  bcastTHIN.csv
exercise1/scripts/: barrier_latencies.sh  bcast_latencies.sh  make.sh  results_and_modelling.ipynb
exercise2/: CMakeLists.txt  README.md  mpi-mandelbrot.c
exercise2/apps/: CMakeLists.txt  main.c
exercise2/broadcast/: test.py
exercise2/broadcast/mpi_py/: mpi2.py  mpi3.py  mpi4.py  mpi5.py
exercise2/broadcast/src/: a.out  broadcast.c  test.c  test.py
exercise2/broadcast/tests/: a.out  broadcast_openmp.c  internet_serial_quicksort.c  internet_serial_quicksort.x  internet_serial_quicksort_no_comments.c  pseudo_templated_array.c  pseudo_templated_array.x  pseudo_templated_quicksort.c  serial_quicksort.c  serial_quicksort.x  who_am_i.c  who_am_i.x
exercise2/include/: mandelbrot.h
exercise2/plots/: mandelbrot.pgm  mandelbrot_MPI.pgm  mandelbrot_set.pgm
exercise2/results/: strong_scaling_MPI_EPYC.csv  strong_scaling_OMP_EPYC-hybrid2.csv  strong_scaling_OMP_EPYC.csv  weak_scaling_MPI_EPYC.csv  weak_scaling_OMP_EPYC-hybrid2.csv  weak_scaling_OMP_EPYC.csv
exercise2/scripts/: gatherv01.c  gatherv02.c  gatherv03.c  make.sh  mandelbrot.c  mandelbrot_MPI  mandelbrot_MPI.c  results-hybrid.ipynb  results.ipynb  strong_scaling_MPI_EPYC.sh  strong_scaling_OMP_EPYC.sh  test.py  test_hybrid.c  test_hybrid_pi.c  test_hybrid_pi2.c  weak_scaling_MPI_EPYC.sh  weak_scaling_OMP_EPYC.sh
exercise2/src/: CMakeLists.txt  mandelbrot.c
(+112 files in other folders)
